fix: Align Cards and Displays Properly

--- a/app/globals.css
+++ b/app/globals.css
@@ -126,7 +126,7 @@ border-radius: 12px;
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-  align-items: baseline;
+  align-items: flex-start;
   flex-wrap: wrap;
 }
 
@@ -169,5 +169,11 @@ border-radius: 12px;
   .card-stack{
     flex-direction: column;
     align-items: center;
+  }
+
+  .proj-card{
+    width: 97% !important;
+    height: 50% !important;
+    margin: 15px 0 !important;
   }
 }
